Adding Rabbit as Psuedo Random Number Generator

--- a/cipup/Makefile
+++ b/cipup/Makefile
@@ -1,8 +1,8 @@
 CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
 
-OBJS = obj/cipup.o
+OBJS = obj/rabbit.o obj/cipup.o
 
-SRCS = src/cipup.cpp
+#SRCS = prng/rabbit.c src/cipup.cpp
 
 LIBS =
 
@@ -11,7 +11,13 @@ TARGET = bin/cipup.exe
 $(TARGET):	$(OBJS)
 	$(CXX) -o $(TARGET) $(OBJS) $(LIBS)
 
-$(OBJS) : $(SRCS)
+#$(OBJS) : $(SRCS)
+#	$(CXX) -c $< -o $@
+
+obj/rabbit.o: prng/rabbit.c prng/ecrypt-sync.h prng/ecrypt-portable.h prng/ecrypt-machine.h prng/ecrypt-config.h
+	$(CXX) -c $< -o $@
+	
+obj/cipup.o: src/cipup.cpp prng/ecrypt-sync.h prng/ecrypt-portable.h prng/ecrypt-machine.h prng/ecrypt-config.h
 	$(CXX) -c $< -o $@
 
 all:	$(TARGET)
