Setting up basic DLL structure

--- a/cipup/Makefile
+++ b/cipup/Makefile
@@ -1,15 +1,29 @@
 CXXFLAGS =	-O2 -g -Wall -fmessage-length=0
 
-OBJS = obj/rabbit.o obj/cipup.o
+OBJS = obj/rabbit.o obj/cipup.o obj/test.o
 
 #SRCS = prng/rabbit.c src/cipup.cpp
 
-LIBS =
+LIBS = lib/cipup.dll
 
-TARGET = bin/cipup.exe
+DESTLIBS = bin/cipup.dll 
 
-$(TARGET):	$(OBJS)
-	$(CXX) -o $(TARGET) $(OBJS) $(LIBS)
+DLLOBJS = obj/rabbit.o obj/cipup.o
+
+DLLTARGET = lib/cipup.dll
+
+SYSLIBS =
+
+TESTOBJS = obj/test.o
+
+TESTTARGET = bin/test.exe
+
+$(DLLTARGET): $(DLLOBJS)
+	$(CXX) $(DLLOBJS) -shared -o $(DLLTARGET)
+	
+$(TESTTARGET):	$(TESTOBJS) $(LIBS)
+	$(CXX) -o $(TESTTARGET) $(TESTOBJS) $(LIBS) $(SYSLIBS)
+	cp $(LIBS) $(DESTLIBS)
 
 #$(OBJS) : $(SRCS)
 #	$(CXX) -c $< -o $@
@@ -17,10 +31,18 @@ $(TARGET):	$(OBJS)
 obj/rabbit.o: prng/rabbit.c prng/ecrypt-sync.h prng/ecrypt-portable.h prng/ecrypt-machine.h prng/ecrypt-config.h
 	$(CXX) -c $< -o $@
 	
-obj/cipup.o: src/cipup.cpp prng/ecrypt-sync.h prng/ecrypt-portable.h prng/ecrypt-machine.h prng/ecrypt-config.h
+obj/cipup.o: src/cipup.cpp src/cipup.hpp prng/ecrypt-sync.h prng/ecrypt-portable.h prng/ecrypt-machine.h prng/ecrypt-config.h
 	$(CXX) -c $< -o $@
 
-all:	$(TARGET)
+obj/test.o: src/test.cpp src/cipup.hpp
+	$(CXX) -c $< -o $@
+
+
+all: dll test
+
+dll: $(DLLTARGET)
+
+test: $(DLLTARGET) $(TESTTARGET)
 
 clean:
-	rm -f $(OBJS) $(TARGET)
+	rm -f $(OBJS) $(LIBS) $(TESTTARGET) $(DESTLIBS)
