Cipup finished, restructured and modified for fully CLI compliant interface.

--- a/cipup_internal_test/cipup_internal_test.vcproj
+++ b/cipup_internal_test/cipup_internal_test.vcproj
@@ -134,6 +134,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="$(ProjectDir)..\cipup\Release\rabbit.obj"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
