--- a/cipup/Cipup.vcproj
+++ b/cipup/Cipup.vcproj
@@ -119,6 +119,7 @@
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
+				GenerateXMLDocumentationFiles="true"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
