--- a/cipupCLT/cipupCLT.vcproj
+++ b/cipupCLT/cipupCLT.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="cipup_internal_test"
-	ProjectGUID="{436116EB-FA68-4FFF-82AC-96BA61315039}"
-	RootNamespace="cipup_internal_test"
+	Name="cipupCLT"
+	ProjectGUID="{7CED0E29-4E9F-4548-86A7-E2D1BDCABAA0}"
+	RootNamespace="cipupCLT"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -86,8 +86,8 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="2"
-			CharacterSet="2"
+			ConfigurationType="1"
+			CharacterSet="0"
 			ManagedExtensions="1"
 			WholeProgramOptimization="1"
 			>
@@ -128,8 +128,10 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(SolutionDir)cipup\Release\cipup.obj $(SolutionDir)cipup\Release\rabbit.obj"
 				GenerateDebugInformation="true"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				EntryPointSymbol="cipupCLT::main"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -156,11 +158,6 @@
 		</Configuration>
 	</Configurations>
 	<References>
-		<AssemblyReference
-			RelativePath="..\..\..\..\Program Files (x86)\NUnit 2.5.10\bin\net-2.0\framework\nunit.framework.dll"
-			AssemblyName="nunit.framework, Version=2.5.10.11092, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL"
-			MinFrameworkVersion="131072"
-		/>
 	</References>
 	<Files>
 		<Filter
@@ -169,11 +166,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\cipup_internal_test.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\dllmain.cpp"
+				RelativePath=".\src\cipupCLT.cpp"
 				>
 			</File>
 			<File
@@ -187,7 +180,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\src\cipup_internal_test.hpp"
+				RelativePath=".\src\cipupCLT.hpp"
 				>
 			</File>
 			<File
@@ -200,6 +193,44 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\sampleFiles\sampleIV"
+				DeploymentContent="true"
+				FileType="5"
+				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="xcopy /d /y $(InputPath) $(TargetDir)"
+						Outputs="$(InputFileName)"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\sampleFiles\sampleKey"
+				DeploymentContent="true"
+				FileType="5"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="copy $(InputFileName) $(SolutionDir)$(ConfigurationName)"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="xcopy /d /y $(InputPath) $(TargetDir)"
+						Outputs="$(InputFileName)"
+					/>
+				</FileConfiguration>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
