--- a/RCT/RCT.csproj
+++ b/RCT/RCT.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7A284550-EEBD-44E5-A26A-8E84011DCF35}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -51,9 +51,17 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Client.cs" />
+    <Compile Include="src\DTO.cs" />
+    <Compile Include="src\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="build.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\cipup\cipup.vcproj">
+      <Project>{C1ECC2F6-25BF-44AC-B023-D833329D4CA5}</Project>
+      <Name>cipup</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
